--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reown/appkit-adapter-wagmi": "^1.0.1",
+    "@tanstack/react-query": "^5.56.2",
+    "@web3modal/wagmi": "^5.1.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "viem": "^2.21.9",
+    "wagmi": "^2.12.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
