--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@reown/appkit-adapter-wagmi": "^1.0.1",
+    "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.56.2",
     "@web3modal/wagmi": "^5.1.9",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.12",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.9",
     "wagmi": "^2.12.12"
   },
