--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@tanstack/react-query": "^5.56.2",
     "@web3modal/wagmi": "^5.1.9",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "swr": "^2.2.5",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
