--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
